# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-07-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make sure the cloudi_service_terminate/2 execution limit is equal to
      MaxT/MaxR - 100 (enforced by a brutal_kill from cloudi_services_monitor,
      with a min value of 1 second and a max value of 60 seconds)
    * Simplify the internal state shown for both internal and external
      services with format_status/2
    * Fixes for aspects

2014-07-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make cloudi_service_queue and cloudi_service_quorum CT tests
      consistently pass without the potential for random failures

2014-07-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add automatic_loading to external service configuration options
    * Make automatic_loading control the loading of modules that contain
      aspect functions (for checking that the aspect function exists)

2014-07-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_core aspects test
    * Alter service configuration option aspects_init_after for
      external services to provide the command line as a list of strings
    * Add aspect testing to the msg_size tests

2014-07-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow AOP (Aspect-Oriented Programming) functionality as
      service configuration options on both external and internal services

2014-07-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the epgsql driver to cloudi_service_db_pgsql
    * Add AOP (Aspect-Oriented Programming) functionality as
      service configuration options for internal services

2014-07-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_core test after update problem
    * Make sure all arguments for example services are present in the
      list of macros which provide defaults
    * Add example service checks to prevent patterns in prefixes for